# AirDrop-Telegram-Bot-CMS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: flags.cmake  sourcelist.cmake
src/: bot.cc  bot.h  content.cc  content.h  files.cc  files.h  main.cc
